  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.
    - Add rescue stanzas to yaboot configuration files.
    - Document raised kernel command-line limits in 2.6.9.
    - Remove devfs=mount from yaboot configuration files. It shouldn't be
      needed any more.
  * Frans Pop
    - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
      about missing lists.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 28 Apr 2005 20:47:19 +0200

debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed to build PDF/TXT versions of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:12:46 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.
  * Colin Watson
    - Add acpi-modules to the amd64 cdrom, hd-media, monolithic, and netboot
      initrds, so that rootskel can turn the fan on.
    - Use dependency resolution for ide-modules, nic-modules,