@@ -73,6 +73,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
     - Document raised kernel command-line limits in 2.6.9.
     - Remove devfs=mount from yaboot configuration files. It shouldn't be
       needed any more.
+    - Don't remove modules.*map from the initrd if we're using real hotplug.
   * Frans Pop
     - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
       about missing lists.
